--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <a href="#" class="logo"><i class="fas fa-book-reader"></i>  STC</a>
             <nav class="navbar">
                 <ul>
-                    
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#classes">Classes</a></li>
                     <li><a href="#teachers">Teachers</a></li>
@@ -304,12 +303,12 @@
         </div>
         <div class="box">
             <h3>Quick Link</h3>
-            <a href="#">Home</a>
-            <a href="#">About us</a>
-            <a href="#">Classes</a>
-            <a href="#">Teachers</a>
-            <a href="#">Qualities</a>
-            <a href="#">Contact</a>
+            <a href="#Home">Home</a>
+            <a href="#about">About us</a>
+            <a href="#classes">Classes</a>
+            <a href="#teachers">Teachers</a>
+            <a href="#qualities">Qualities</a>
+            <a href="#contact">Contact</a>
         </div>
         <div class="box">
             <h3>Contact info</h3>
@@ -321,18 +320,6 @@
     </div>
 </div>
 <!-- footer section end-->
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
